<package>
  <name>cladplus</name>
  <version>0.6.0</version>
  <description>
    This package provides cladplus packages.
  </description>
  <maintainer email="veronica.panadeiro@aimen.es">Verónica Panadeiro Castro</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
